Include any text shadow bounds in SVG text cull rect.

BUG=628414

Review-Url: https://codereview.chromium.org/2162033003
Cr-Commit-Position: refs/heads/master@{#406612}

Former-commit-id: 378e044af89a3c3a75f83c60508c0c42a297bae1